Added CSS Rules 0 to 1e-99

--- a/src/components/wheel/index.css
+++ b/src/components/wheel/index.css
@@ -6,9 +6,9 @@
     --wheel-color: #da3768;
     --neutral-color: white;
     --PI: 3.14159265358979;
-    --nb-item: 0;
-    --item-nb: 0;
-    --selected-item: 0;
+    --nb-item: 1e-99;
+    --item-nb: 1e-99;
+    --selected-item: 1e-99;
     --nb-turn: 5;
     --spinning-duration: 4s;
     --reset-duration: 0.25s;
